--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@ body {
 }
 
 .h1-services {
-  color: #f3670a;
+  color: #00a2e2;
 }
 
 /***********END OF SERVICES PAGE*************/
@@ -716,7 +716,7 @@ p.card-text:hover {
   /*HERO SECTION*/
   .nav-logo {
     height: 50px;
-    width: 285px;
+    width: 250px;
   }
   .banner-heading {
     font-size: 42px;
@@ -785,9 +785,6 @@ p.card-text:hover {
     font-size: 11px;
   }
   /***********SERVICES PAGE*************/
-  .services-h1 {
-    font-size: 28px;
-  }
   .section-line-services {
     width: 50%;
     height: 2px;
@@ -797,7 +794,6 @@ p.card-text:hover {
   .flex-columns .column .column-2 {
     height: 470px;
     background-color: #00a2e2;
-
     margin-top: 5px;
   }
   .carousel-inner {
@@ -810,6 +806,6 @@ p.card-text:hover {
     margin-bottom: 60px;
   }
   .services-fptb {
-    font-size: 19px;
+    font-size: 17px;
   }
 }
