fixed section lines for heading and added lines to the contact page

--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ body {
 
 /**********SERVICES HEADER***********/
 .services-header {
-  height: 75vh;
+  height: 85vh;
   background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5)),
     url(images/hero-img.jpg) no-repeat center center / cover;
   background-position: 50% 3%;
@@ -506,7 +506,7 @@ p.card-text:hover {
 }
 
 .contact-header {
-  height: 75vh;
+  height: 85vh;
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)),
     url(images/hero-img2.jpg) no-repeat center center / cover;
   background-position: 50% 50%;
@@ -658,7 +658,7 @@ p.card-text:hover {
   #contact-b div {
     margin-bottom: 1rem;
     padding-bottom: 1rem;
-    border-bottom: 1px #555 solid;
+    border-bottom: 1px #2d2d2d dotted;
   }
   #contact-b div:last-child {
     border: none;
@@ -702,13 +702,15 @@ p.card-text:hover {
     height: 40px;
     width: 255px;
   }
-  .banner-heading {
-    font-size: 42px;
-    margin-top: 100px;
+  /************HERO HEADING***********/
+  .display-4 {
+    font-size: 38px;
+    margin-bottom: 10px;
+    margin-top: 75px;
   }
-
-  .banner-par {
+  .lead {
     font-size: 14px;
+    margin-bottom: 30px;
   }
   /*OUR SERVICES SECTION*/
   .underline {
@@ -720,18 +722,6 @@ p.card-text:hover {
     margin: 0 auto;
     border-radius: 50%;
   }
-
-  /************HERO HEADING***********/
-
-  .display-4 {
-    font-size: 38px;
-    margin-bottom: 10px;
-  }
-  .lead {
-    font-size: 14px;
-    margin-bottom: 30px;
-  }
-
   /************END OF HERO HEADING***********/
   .s-heading {
     font-size: 36px;
@@ -789,8 +779,18 @@ p.card-text:hover {
   .carousel-inner {
     height: 470px;
   }
+  .services-h {
+    font-size: 45px;
+  }
   .services-h2 {
     margin-top: 10px;
+  }
+  .services-h1 {
+    font-size: 23px;
+    margin-top: 10px;
+  }
+  .lead {
+    font-size: 14px;
   }
   .btn-outline {
     margin-bottom: 10px;
@@ -802,5 +802,16 @@ p.card-text:hover {
     font-size: 35px;
     font-weight: 100;
     color: #fff;
+  }
+  /*********ABOUT**********/
+  .about-h {
+    font-size: 45px;
+  }
+  /*********CONTACT**********/
+  .contact-h {
+    font-size: 45px;
+  }
+  .about-title {
+    font-size: 29px;
   }
 }
